. A piece of code used was only introduced in java 11. I switched this out to avoid any compatibility issues.